--- a/VS2019/Support Files/Base.lproj/Main.storyboard
+++ b/VS2019/Support Files/Base.lproj/Main.storyboard
@@ -19,21 +19,77 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6nA-dt-RYa">
-                                <rect key="frame" x="0.0" y="110" width="1024" height="658"/>
+                                <rect key="frame" x="0.0" y="87" width="1024" height="681"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ygj-M5-ZWk">
+                                <rect key="frame" x="480" y="60" width="524" height="27"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="524" id="ITY-6w-WSS"/>
+                                    <constraint firstAttribute="height" constant="27" id="sJu-9N-aQH"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0Px-sy-30Z">
+                                    <size key="itemSize" width="169" height="27"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="legnedCell" id="ewa-sr-vtu" customClass="LegendCollectionViewCell" customModule="VS2019" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="169" height="27"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="169" height="27"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bdZ-K6-qvO">
+                                                    <rect key="frame" x="8" y="3.5" width="20" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="20" id="5LM-L0-SRo"/>
+                                                        <constraint firstAttribute="height" constant="20" id="lVt-li-Gx0"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="saturated Fat" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IsY-Dx-rVR">
+                                                    <rect key="frame" x="37" y="5" width="125" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="125" id="gdq-rP-z8R"/>
+                                                        <constraint firstAttribute="height" constant="17" id="gnF-ba-e8m"/>
+                                                    </constraints>
+                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="bdZ-K6-qvO" firstAttribute="centerY" secondItem="ewa-sr-vtu" secondAttribute="centerY" id="357-9X-632"/>
+                                            <constraint firstItem="IsY-Dx-rVR" firstAttribute="leading" secondItem="bdZ-K6-qvO" secondAttribute="trailing" constant="9" id="Hek-3v-6PJ"/>
+                                            <constraint firstItem="IsY-Dx-rVR" firstAttribute="centerY" secondItem="ewa-sr-vtu" secondAttribute="centerY" id="iYF-po-8wA"/>
+                                            <constraint firstItem="bdZ-K6-qvO" firstAttribute="leading" secondItem="ewa-sr-vtu" secondAttribute="leading" constant="8" id="pTx-g9-8np"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="colorImg" destination="bdZ-K6-qvO" id="Ma6-hE-ac0"/>
+                                            <outlet property="nameText" destination="IsY-Dx-rVR" id="VWR-mM-fIQ"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6nA-dt-RYa" firstAttribute="top" secondItem="Ygj-M5-ZWk" secondAttribute="bottom" id="EaM-0E-GfU"/>
+                            <constraint firstItem="Ygj-M5-ZWk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="MLP-BP-GFe"/>
                             <constraint firstItem="6nA-dt-RYa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Obu-io-PKA"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6nA-dt-RYa" secondAttribute="trailing" id="XIG-Mv-5Jv"/>
-                            <constraint firstItem="6nA-dt-RYa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="90" id="peC-Nv-nsf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ygj-M5-ZWk" secondAttribute="trailing" constant="20" id="iaA-Ld-LSD"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6nA-dt-RYa" secondAttribute="bottom" id="zvi-SD-GKh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="chartView" destination="6nA-dt-RYa" id="pmB-Rj-NEQ"/>
+                        <outlet property="legendCollectionView" destination="Ygj-M5-ZWk" id="aNu-H0-tO9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
