--- a/VS2019/Support Files/Base.lproj/Main.storyboard
+++ b/VS2019/Support Files/Base.lproj/Main.storyboard
@@ -123,7 +123,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jJN-oV-Etq" customClass="ScatterChartView" customModule="Charts">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jJN-oV-Etq" customClass="BarChartView" customModule="Charts">
                                 <rect key="frame" x="20" y="70" width="984" height="678"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
@@ -143,7 +143,60 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NRT-im-YkA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1039.453125" y="22.65625"/>
+            <point key="canvasLocation" x="855" y="652"/>
+        </scene>
+        <!--Pop Up View Controller-->
+        <scene sceneID="ebG-TK-yft">
+            <objects>
+                <viewController storyboardIdentifier="popup" modalTransitionStyle="crossDissolve" modalPresentationStyle="overCurrentContext" id="qa2-PD-QSd" customClass="PopUpViewController" customModule="VS2019" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ReO-8r-wr1">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ryp-9V-yLa">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                                <connections>
+                                    <action selector="close:" destination="qa2-PD-QSd" eventType="touchUpInside" id="3ge-J1-NNM"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ob7-ex-hNH">
+                                <rect key="frame" x="182" y="165.5" width="660" height="437"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t2h-7A-iBI" customClass="PieChartView" customModule="Charts">
+                                        <rect key="frame" x="6" y="6" width="648" height="425"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="t2h-7A-iBI" secondAttribute="trailing" constant="6" id="0et-Ka-l1l"/>
+                                    <constraint firstItem="t2h-7A-iBI" firstAttribute="top" secondItem="ob7-ex-hNH" secondAttribute="top" constant="6" id="0wY-6x-uCV"/>
+                                    <constraint firstItem="t2h-7A-iBI" firstAttribute="leading" secondItem="ob7-ex-hNH" secondAttribute="leading" constant="6" id="1ie-uV-Uql"/>
+                                    <constraint firstAttribute="width" constant="660" id="KY5-8C-30G"/>
+                                    <constraint firstAttribute="height" constant="437" id="naF-ef-RMZ"/>
+                                    <constraint firstAttribute="bottom" secondItem="t2h-7A-iBI" secondAttribute="bottom" constant="6" id="p0X-hP-3Jd"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.50196081400000003" green="0.50196081400000003" blue="0.50196081400000003" alpha="0.45000000000000001" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="ob7-ex-hNH" firstAttribute="centerY" secondItem="Ryp-9V-yLa" secondAttribute="centerY" id="0YD-oX-YxL"/>
+                            <constraint firstItem="Ryp-9V-yLa" firstAttribute="leading" secondItem="nCq-HF-uXL" secondAttribute="leading" id="Hgd-zd-ppx"/>
+                            <constraint firstItem="Ryp-9V-yLa" firstAttribute="trailing" secondItem="nCq-HF-uXL" secondAttribute="trailing" id="SK8-F5-REQ"/>
+                            <constraint firstItem="ob7-ex-hNH" firstAttribute="centerX" secondItem="Ryp-9V-yLa" secondAttribute="centerX" id="aeD-7J-mqA"/>
+                            <constraint firstItem="Ryp-9V-yLa" firstAttribute="bottom" secondItem="nCq-HF-uXL" secondAttribute="bottom" id="fj6-zO-iM0"/>
+                            <constraint firstItem="Ryp-9V-yLa" firstAttribute="top" secondItem="ReO-8r-wr1" secondAttribute="top" id="xxG-1v-BZQ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="nCq-HF-uXL"/>
+                    </view>
+                    <connections>
+                        <outlet property="chartView" destination="t2h-7A-iBI" id="oX1-t2-dBu"/>
+                        <outlet property="frameView" destination="ob7-ex-hNH" id="e1I-DN-Hfv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ud8-Ae-urV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1622.4609375" y="651.5625"/>
         </scene>
     </scenes>
 </document>
