--- a/VS2019/Support Files/Base.lproj/Main.storyboard
+++ b/VS2019/Support Files/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kgs-zt-ZFB">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
@@ -138,7 +138,7 @@
                         <viewLayoutGuide key="safeArea" id="DVf-TF-2ll"/>
                     </view>
                     <connections>
-                        <outlet property="chart" destination="jJN-oV-Etq" id="TgI-fW-tsh"/>
+                        <outlet property="chartView" destination="jJN-oV-Etq" id="f5N-yD-IUo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NRT-im-YkA" userLabel="First Responder" sceneMemberID="firstResponder"/>
