--- a/VS2019/Support Files/Base.lproj/Main.storyboard
+++ b/VS2019/Support Files/Base.lproj/Main.storyboard
@@ -124,21 +124,81 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xDD-3E-fQV">
-                                <rect key="frame" x="0.0" y="160" width="1024" height="608"/>
+                                <rect key="frame" x="0.0" y="80" width="1024" height="688"/>
+                                <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fOR-3u-xfg">
+                                        <rect key="frame" x="16" y="8" width="992" height="40"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="VZr-Mg-c8U"/>
+                                        </constraints>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="WR0-kt-kPI">
+                                            <size key="itemSize" width="169" height="27"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="legnedCell" id="UlY-eb-ZKx" customClass="LegendCollectionViewCell" customModule="VS2019" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="6.5" width="169" height="27"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="169" height="27"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9nV-Gw-QFC">
+                                                            <rect key="frame" x="8" y="3.5" width="20" height="20"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="20" id="dXv-rW-S4V"/>
+                                                                <constraint firstAttribute="height" constant="20" id="ktL-Mi-L5G"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="saturated Fat" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qkd-i7-aFH">
+                                                            <rect key="frame" x="37" y="5" width="125" height="17"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="125" id="hKQ-6c-onc"/>
+                                                                <constraint firstAttribute="height" constant="17" id="iY3-fZ-dYl"/>
+                                                            </constraints>
+                                                            <nil key="textColor"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <textInputTraits key="textInputTraits"/>
+                                                        </textField>
+                                                    </subviews>
+                                                </view>
+                                                <constraints>
+                                                    <constraint firstItem="qkd-i7-aFH" firstAttribute="leading" secondItem="9nV-Gw-QFC" secondAttribute="trailing" constant="9" id="HlO-HM-wdw"/>
+                                                    <constraint firstItem="9nV-Gw-QFC" firstAttribute="centerY" secondItem="UlY-eb-ZKx" secondAttribute="centerY" id="gVd-eD-bz2"/>
+                                                    <constraint firstItem="qkd-i7-aFH" firstAttribute="centerY" secondItem="UlY-eb-ZKx" secondAttribute="centerY" id="i6Q-8S-RWq"/>
+                                                    <constraint firstItem="9nV-Gw-QFC" firstAttribute="leading" secondItem="UlY-eb-ZKx" secondAttribute="leading" constant="8" id="v2c-n3-TFM"/>
+                                                </constraints>
+                                                <connections>
+                                                    <outlet property="colorImg" destination="9nV-Gw-QFC" id="N3R-E1-Kw9"/>
+                                                    <outlet property="nameText" destination="qkd-i7-aFH" id="0JP-yc-c7r"/>
+                                                </connections>
+                                            </collectionViewCell>
+                                        </cells>
+                                    </collectionView>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="fOR-3u-xfg" firstAttribute="top" secondItem="xDD-3E-fQV" secondAttribute="top" constant="8" id="76R-UL-mbU"/>
+                                    <constraint firstAttribute="trailing" secondItem="fOR-3u-xfg" secondAttribute="trailing" constant="16" id="CLO-iR-5nz"/>
+                                    <constraint firstItem="fOR-3u-xfg" firstAttribute="leading" secondItem="xDD-3E-fQV" secondAttribute="leading" constant="16" id="PCj-Hh-CMW"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="xDD-3E-fQV" firstAttribute="top" secondItem="DVf-TF-2ll" secondAttribute="top" constant="140" id="4u5-2M-tNL"/>
                             <constraint firstItem="xDD-3E-fQV" firstAttribute="leading" secondItem="DVf-TF-2ll" secondAttribute="leading" id="5rQ-Rq-xqt"/>
-                            <constraint firstItem="xDD-3E-fQV" firstAttribute="bottom" secondItem="DVf-TF-2ll" secondAttribute="bottom" id="7dr-zO-PBH"/>
+                            <constraint firstItem="xDD-3E-fQV" firstAttribute="bottom" secondItem="DVf-TF-2ll" secondAttribute="bottom" id="8Fj-6K-Fpa"/>
                             <constraint firstItem="xDD-3E-fQV" firstAttribute="trailing" secondItem="DVf-TF-2ll" secondAttribute="trailing" id="Zj5-R8-rQT"/>
+                            <constraint firstItem="xDD-3E-fQV" firstAttribute="top" secondItem="DVf-TF-2ll" secondAttribute="top" constant="60" id="y46-sZ-Zs0"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="DVf-TF-2ll"/>
                     </view>
                     <connections>
                         <outlet property="containerView" destination="xDD-3E-fQV" id="n5Z-BT-eHg"/>
+                        <outlet property="legendCollectionView" destination="fOR-3u-xfg" id="RVJ-pa-eQ5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NRT-im-YkA" userLabel="First Responder" sceneMemberID="firstResponder"/>
